--- a/tainanfist/demo.html
+++ b/tainanfist/demo.html
@@ -5673,14 +5673,12 @@ Llogo.png</tw-passagedata><tw-passagedata pid="79" name="第六章1" tags="autos
 怒吼聲中，一切都化為模糊。
 &lt;&lt;replace &#39;#storylink&#39;&gt;&gt;&lt;&lt;button &#39;繼續&#39; &#39;預告0&#39;&gt;&gt;&lt;&lt;/button&gt;&gt;&lt;&lt;/replace&gt;&gt;
 &lt;&lt;/if&gt;&gt;\</tw-passagedata><tw-passagedata pid="96" name="預告" tags="autosave center" position="5075,100" size="100,100">&lt;h1&gt;預 告&lt;/h1&gt;
-@@.delayed;精怪之王的甦醒迫在眉睫⋯⋯@@
-@@.delayed;你和千歲必須找到其他天地門的堂口，重修封印。@@
-
+@@.delayed;精怪之王的甦醒迫在眉睫⋯⋯&lt;br&gt;你和千歲必須找到其他天地門的堂口，重修封印。@@
+@@.delayed;@@
 @@.delayed;但⋯⋯事實上卻不是你想得如此簡單。@@
-
-@@.delayed;2024年，府城謎拳系列第二集。@@
-@@.delayed;拳師，立於府城！@@
-
+@@.delayed;@@
+@@.delayed;2024年，府城謎拳系列第二集。&lt;br&gt;拳師，立於府城！@@
+@@.delayed;@@
 @@.delayed;&lt;span style=&#39;color:red;&#39;&gt;【遊戲結束，感謝您的遊玩】&lt;/span&gt;@@</tw-passagedata><tw-passagedata pid="97" name="序章0-2" tags="center notran nofooter bg1 title" position="975,100" size="100,100">&lt;&lt;run clearContent(&quot;decoration-separator&quot;)&gt;&gt;
 &lt;&lt;timed 1s t8n&gt;&gt;&lt;div style=&quot;max-width: 400px; margin: 0 auto;background-color: rgb(255 255 255 / 70%); border-radius: 20px;&quot;&gt;
 拳師，
@@ -6143,19 +6141,19 @@ Llogo.png</tw-passagedata><tw-passagedata pid="79" name="第六章1" tags="autos
 &lt;li&gt;遊戲內建自動存檔功能，若@@color:red;因故關閉遊戲程式導致遊戲進度重置@@，只需使用同一瀏覽器重新開啟遊戲網址，點擊功能列中的 &lt;img style= &quot;display: inline;&quot; src=&quot;media/img/save.png&quot; height=&quot;20px&quot;&gt; 匯入存檔，或是從下側選單中的 &lt;img style= &quot;display: inline;&quot; src=&quot;media/img/datamenu.png&quot; height=&quot;20px&quot;&gt; 選擇欲遊玩的章節、關卡。&lt;/li&gt;
 &lt;/ol&gt;&lt;/div&gt;</tw-passagedata><tw-passagedata pid="131" name="教學說明" tags="autosave center" position="600,200" size="100,100">&lt;&lt;run showheader()&gt;&gt;&lt;&lt;run showfooter()&gt;&gt;&lt;h1 class=&quot;fancy&quot;&gt;遊戲教學&lt;/h1&gt;
 &lt;&lt;include &#39;遊戲教學&#39;&gt;&gt;
-&lt;&lt;button &quot;開始遊戲&quot; &quot;序章0-1&quot;&gt;&gt;&lt;&lt;/button&gt;&gt;</tw-passagedata><tw-passagedata pid="132" name="第一章2-0" tags="autosave nofooter center tvscene" position="1275,200" size="100,100">&lt;&lt;run clearContent(&quot;decoration-separator&quot;)&gt;&gt;&lt;img src=&quot;media/img/scene01.png&quot; width=&quot;320px&quot;&gt;&lt;div id=&#39;scene&#39;&gt;\
+&lt;&lt;button &quot;開始遊戲&quot; &quot;序章0-1&quot;&gt;&gt;&lt;&lt;/button&gt;&gt;</tw-passagedata><tw-passagedata pid="132" name="第一章2-0" tags="autosave nofooter center tvscene" position="1275,200" size="100,100">&lt;&lt;run clearContent(&quot;decoration-separator&quot;)&gt;&gt;&lt;img src=&quot;media/img/scene01.png&quot; width=&quot;100%&quot; style=&quot;max-width: 600px;&quot;&gt;&lt;div id=&#39;scene&#39;&gt;\
 @@.delayed;你打出的掌法，在空間發出一陣強風！@@
 @@.delayed;&lt;&lt;button &quot;繼續&quot; &quot;第一章2&quot;&gt;&gt;&lt;&lt;/button&gt;&gt;@@
-&lt;/div&gt;</tw-passagedata><tw-passagedata pid="133" name="第二章3-0" tags="autosave nofooter center tvscene" position="1850,300" size="100,100">&lt;&lt;run clearContent(&quot;decoration-separator&quot;)&gt;&gt;&lt;img src=&quot;media/img/scene02.png&quot; width=&quot;320px&quot;&gt;&lt;div id=&#39;scene&#39;&gt;\
+&lt;/div&gt;</tw-passagedata><tw-passagedata pid="133" name="第二章3-0" tags="autosave nofooter center tvscene" position="1850,300" size="100,100">&lt;&lt;run clearContent(&quot;decoration-separator&quot;)&gt;&gt;&lt;img src=&quot;media/img/scene02.png&quot; width=&quot;100%&quot; style=&quot;max-width: 600px;&quot;&gt;&lt;div id=&#39;scene&#39;&gt;\
 @@.delayed;你搭配的療藥，化散關聖帝君背上的毒瘡！@@
 @@.delayed;&lt;&lt;button &quot;繼續&quot; &quot;第二章3&quot;&gt;&gt;&lt;&lt;/button&gt;&gt;@@
-&lt;/div&gt;</tw-passagedata><tw-passagedata pid="134" name="第三章3-0" tags="autosave center nofooter tvscene" position="2800,300" size="100,100">&lt;&lt;notify&gt;&gt;你已經學會水猴拳&lt;&lt;/notify&gt;&gt;&lt;&lt;run clearContent(&quot;decoration-separator&quot;)&gt;&gt;&lt;img src=&quot;media/img/scene03.png&quot; width=&quot;320px&quot;&gt;&lt;div id=&#39;scene&#39;&gt;\
+&lt;/div&gt;</tw-passagedata><tw-passagedata pid="134" name="第三章3-0" tags="autosave center nofooter tvscene" position="2800,300" size="100,100">&lt;&lt;notify&gt;&gt;你已經學會水猴拳&lt;&lt;/notify&gt;&gt;&lt;&lt;run clearContent(&quot;decoration-separator&quot;)&gt;&gt;&lt;img src=&quot;media/img/scene03.png&quot; width=&quot;100%&quot; style=&quot;max-width: 600px;&quot;&gt;&lt;div id=&#39;scene&#39;&gt;\
 @@.delayed;「齊天大聖！」&lt;br&gt;（你學會了水猴拳）@@
 @@.delayed;&lt;&lt;button &quot;繼續&quot; &quot;第三章3&quot;&gt;&gt;&lt;&lt;/button&gt;&gt;@@
-&lt;/div&gt;</tw-passagedata><tw-passagedata pid="135" name="第五章2-0" tags="autosave center nofooter tvscene" position="4000,200" size="100,100">&lt;&lt;run clearContent(&quot;decoration-separator&quot;)&gt;&gt;&lt;img src=&quot;media/img/scene04.png&quot; width=&quot;320px&quot;&gt;&lt;div id=&#39;scene&#39;&gt;\
+&lt;/div&gt;</tw-passagedata><tw-passagedata pid="135" name="第五章2-0" tags="autosave center nofooter tvscene" position="4000,200" size="100,100">&lt;&lt;run clearContent(&quot;decoration-separator&quot;)&gt;&gt;&lt;img src=&quot;media/img/scene04.png&quot; width=&quot;100%&quot; style=&quot;max-width: 600px;&quot;&gt;&lt;div id=&#39;scene&#39;&gt;\
 @@.delayed;藉由保生大帝的力量，陳天南的身體開始發生變化，化為「精怪．無支歧」@@
 @@.delayed;&lt;&lt;button &quot;繼續&quot; &quot;第五章2&quot;&gt;&gt;&lt;&lt;/button&gt;&gt;@@
-&lt;/div&gt;</tw-passagedata><tw-passagedata pid="136" name="預告0" tags="autosave center nofooter tvscene" position="4975,100" size="100,100">&lt;&lt;run clearContent(&quot;decoration-separator&quot;)&gt;&gt;&lt;img src=&quot;media/img/scene05.png&quot; width=&quot;320px&quot;&gt;&lt;div id=&#39;scene&#39;&gt;\
+&lt;/div&gt;</tw-passagedata><tw-passagedata pid="136" name="預告0" tags="autosave center nofooter tvscene" position="4975,100" size="100,100">&lt;&lt;run clearContent(&quot;decoration-separator&quot;)&gt;&gt;&lt;img src=&quot;media/img/scene05.png&quot; width=&quot;100%&quot; style=&quot;max-width: 600px;&quot;&gt;&lt;div id=&#39;scene&#39;&gt;\
 @@.delayed;未完待續...@@
 @@.delayed;&lt;&lt;button &quot;觀看遊戲預告&quot; &quot;預告&quot;&gt;&gt;&lt;&lt;/button&gt;&gt;@@
 &lt;/div&gt;</tw-passagedata><tw-passagedata pid="137" name="序章關卡提示" tags="" position="875,600" size="100,100">@@color:red;好像不是喔，再試一次？@@
