--- a/tainanfist/demo.html
+++ b/tainanfist/demo.html
@@ -4158,7 +4158,7 @@ Normal text. Normal text. Normal text. Normal text. Normal text. //emphasised te
 
 &lt;a href=&quot;https://www.facebook.com/tncomu&quot; target=&quot;_blank&quot;&gt;&lt;i class=&quot;fa-brands fa-square-facebook&quot;&gt;&lt;/i&gt;&lt;/a&gt;
 
-&lt;a href=&quot;https://www.google.com/maps/d/u/0/edit?mid=1hsnY3GKASKThnXv0x_o_Io5TPjjQVB8&amp;usp=sharing&quot; target=&quot;_blank&quot;&gt;&lt;i class=&quot;fa-solid fa-map-location-dot&quot;&gt;&lt;/i&gt;&lt;/a&gt;
+&lt;a href=&quot;https://www.google.com/maps/d/embed?mid=1hsnY3GKASKThnXv0x_o_Io5TPjjQVB8&amp;ehbc=2E312F&quot; target=&quot;_blank&quot;&gt;&lt;i class=&quot;fa-solid fa-map-location-dot&quot;&gt;&lt;/i&gt;&lt;/a&gt;
 
 &lt;a target=&quot;_blank&quot; id=&quot;sharebutton&quot; href=&quot;https://www.facebook.com/sharer/sharer.php?u=https://tina458615.github.io/tainanfist&quot;&gt;&lt;i class=&quot;fa-solid fa-share-nodes&quot;&gt;&lt;/i&gt;&lt;/a&gt;</tw-passagedata><tw-passagedata pid="9" name="story title" tags="nobr edit" position="200,700" size="100,100">&lt;!-- TITLE ON THE TOP OF THE PAGE IS POPULATED HERE --&gt;
 /*
