--- a/tainanfist/demo.html
+++ b/tainanfist/demo.html
@@ -6134,7 +6134,7 @@ Llogo.png</tw-passagedata><tw-passagedata pid="79" name="第六章1" tags="autos
 &lt;ol id=&#39;story&#39;&gt;
 &lt;li&gt;遊戲程式透過網頁瀏覽器來運作，建議使用@@color:green;chrome瀏覽器@@。遊玩過程中須保持網路連線，@@color:red;請勿點擊網頁瀏覽器上一頁@@，避免跳出遊戲程式。&lt;/li&gt;
 &lt;li&gt;遊戲解謎過程會需要搭配@@color:green;遊戲地圖@@使用，根據遊戲程式中的提示號碼，找到地圖上對應文鳥情報局編號之內容。&lt;br&gt;&lt;img src=&quot;media/img/編號說明.png&quot; height=&quot;50px&quot;&gt;&lt;/li&gt;
-&lt;li&gt;遊戲中看到&lt;&lt;link &#39;連結&#39;&gt;&gt;&lt;&lt;/link&gt;&gt;，可點擊進行互動操作。&lt;/li&gt;
+&lt;li&gt;遊戲中看到　&lt;&lt;link &#39;連結&#39;&gt;&gt;&lt;&lt;/link&gt;&gt;　&lt;span style=&#39;background-color:#f9f989;&#39;&gt;&lt;span class=&quot;sc-icon sc-lightbulb&quot;&gt;&lt;/span&gt;&lt;&lt;link &#39;小知識&#39;&gt;&gt;&lt;&lt;/link&gt;&gt;&lt;/span&gt;，可點擊進行互動操作。&lt;/li&gt;
 &lt;li&gt;使用手機執行遊戲程式時，點擊上側 &lt;img style= &quot;display: inline;&quot; src=&quot;media/img/close.png&quot; height=&quot;20px&quot;&gt; 開啟@@color:green;遊戲功能列@@，功能列中各個按鈕的功能如下。&lt;br&gt;&lt;img src=&quot;media/img/功能列表.png&quot; height=&quot;150px&quot;&gt;&lt;/li&gt;
 &lt;li&gt;點擊功能列中 &lt;img style= &quot;display: inline;&quot; src=&quot;media/img/setting.png&quot; height=&quot;20px&quot;&gt; 可以進行文字字體、文字大小與開關通知的設定。&lt;/li&gt;
 &lt;li&gt;功能列中的 &lt;img style= &quot;display: inline;&quot; src=&quot;media/img/save.png&quot; height=&quot;20px&quot;&gt; 可以儲存遊戲進度； &lt;img style= &quot;display: inline;&quot; src=&quot;media/img/restart.png&quot; height=&quot;20px&quot;&gt; 則可以清除所有遊戲資料，從頭開始遊戲。&lt;/li&gt;
