--- a/tainanfist/demo.html
+++ b/tainanfist/demo.html
@@ -6385,7 +6385,7 @@ A為&quot;一(1)&quot;、B為&quot;三(3)&quot;、C為&quot;祀(4)&quot;、D為&
 弱點錯誤，再試一次？
 
 &lt;&lt;linkappend &#39;觀看提示&#39;&gt;&gt;
-陳天南撞上白牆後受到傷害，可見@@color:white;白色@@所屬的五行就是其弱點。
+陳天南撞上白牆後受到傷害，可見@@color:green;白色@@所屬的五行就是其弱點。
 
 &lt;&lt;linkreplace &#39;告訴我正確答案&#39;&gt;&gt;白色屬@@color:green;金@@，選擇@@color:red;金@@手指。&lt;&lt;/linkreplace&gt;&gt;&lt;&lt;/linkappend&gt;&gt;
 &lt;&lt;button &#39;返回&#39; &#39;第三章關卡3&#39;&gt;&gt;&lt;&lt;/button&gt;&gt;
