--- a/tainanfist/demo.html
+++ b/tainanfist/demo.html
@@ -6424,7 +6424,7 @@ A為&quot;一(1)&quot;、B為&quot;三(3)&quot;、C為&quot;祀(4)&quot;、D為&
 &lt;&lt;/if&gt;&gt;\
 &lt;&lt;if $story is 5&gt;&gt;\
 你似乎逐步理解事實的真相，但很多事情還是得要詢問陳天南，你現在並不知道陳天南的下落。
-&lt;&lt;replace &#39;#storylink&#39;&gt;&gt;&lt;&lt;button &#39;繼續旅程&#39; &#39;新四章0&#39;&gt;&gt;&lt;&lt;/button&gt;&gt;&lt;&lt;/replace&gt;&gt;
+&lt;&lt;replace &#39;#storylink&#39;&gt;&gt;&lt;&lt;button &#39;繼續旅程&#39; &#39;第四章0&#39;&gt;&gt;&lt;&lt;/button&gt;&gt;&lt;&lt;/replace&gt;&gt;
 &lt;&lt;/if&gt;&gt;\</tw-passagedata><tw-passagedata pid="159" name="第四章0" tags="center nofooter title bg5" position="3600,0" size="100,100">&lt;&lt;notify&gt;&gt;第四章&lt;&lt;/notify&gt;&gt;&lt;&lt;run clearContent(&quot;decoration-separator&quot;)&gt;&gt;
 &lt;&lt;timed 1s t8n&gt;&gt;
 &lt;&lt;replace &#39;#storylink&#39;&gt;&gt;&lt;&lt;button &#39;繼續&#39; &#39;第四章1&#39;&gt;&gt;&lt;&lt;/button&gt;&gt;&lt;&lt;/replace&gt;&gt;
