--- a/tainanfist/demo.html
+++ b/tainanfist/demo.html
@@ -4413,7 +4413,9 @@ Normal text. Normal text. Normal text. Normal text. Normal text. //emphasised te
   └&lt;&lt;link &#39;【後日談關卡1】&#39;&gt;&gt;&lt;&lt;goto &#39;第六章關卡1&#39;&gt;&gt;&lt;&lt;script&gt;&gt;Dialog.close();&lt;&lt;/script&gt;&gt;&lt;&lt;/link&gt;&gt;
   └&lt;&lt;link &#39;【後日談關卡2】&#39;&gt;&gt;&lt;&lt;goto &#39;第六章關卡2&#39;&gt;&gt;&lt;&lt;script&gt;&gt;Dialog.close();&lt;&lt;/script&gt;&gt;&lt;&lt;/link&gt;&gt;
   
-  &lt;&lt;link &#39;【遊戲預告】&#39;&gt;&gt;&lt;&lt;goto &#39;預告&#39;&gt;&gt;&lt;&lt;script&gt;&gt;Dialog.close();&lt;&lt;/script&gt;&gt;&lt;&lt;/link&gt;&gt;&lt;/div&gt;</tw-passagedata><tw-passagedata pid="20" name="版面預覽" tags="" position="300,825" size="100,100">[[stat page 1]]
+  &lt;&lt;link &#39;【遊戲預告】&#39;&gt;&gt;&lt;&lt;goto &#39;預告&#39;&gt;&gt;&lt;&lt;script&gt;&gt;Dialog.close();&lt;&lt;/script&gt;&gt;&lt;&lt;/link&gt;&gt;&lt;/div&gt;
+  
+  </tw-passagedata><tw-passagedata pid="20" name="版面預覽" tags="" position="300,825" size="100,100">[[stat page 1]]
 [[stat page 2]]
 [[stat page 3]]</tw-passagedata><tw-passagedata pid="21" name="Widgets" tags="don&#39;t-edit widget nobr" position="200,425" size="100,100">&lt;!-- [img]語法簡化 --&gt;
 &lt;!-- &lt;&lt;twineimg &quot;Character_01.png&quot;&gt;&gt; --&gt;
