--- a/tainanfist/demo.html
+++ b/tainanfist/demo.html
@@ -5735,12 +5735,8 @@ Llogo.png</tw-passagedata><tw-passagedata pid="79" name="第六章1" tags="autos
 
 &lt;/div&gt;
 &lt;&lt;next&gt;&gt;&lt;&lt;replace &#39;#storylink&#39;&gt;&gt;&lt;&lt;button &#39;繼續&#39; &#39;序章0-3&#39;&gt;&gt;&lt;&lt;/button&gt;&gt;&lt;&lt;/replace&gt;&gt;
-&lt;&lt;/timed&gt;&gt;&lt;span id=&#39;storylink&#39;&gt;&lt;/span&gt;</tw-passagedata><tw-passagedata pid="98" name="第一章0" tags="center nofooter bg2 title" position="1375,0" size="100,100">&lt;&lt;notify&gt;&gt;第一章&lt;&lt;/notify&gt;&gt;&lt;&lt;run clearContent(&quot;decoration-separator&quot;)&gt;&gt;
-&lt;&lt;timed 1s t8n&gt;&gt;
-&lt;&lt;replace &#39;#storylink&#39;&gt;&gt;&lt;&lt;button &#39;繼續&#39; &#39;第一章1&#39;&gt;&gt;&lt;&lt;/button&gt;&gt;&lt;&lt;/replace&gt;&gt;
-&lt;&lt;/timed&gt;&gt;
-
-&lt;span id=&#39;storylink&#39;&gt;&lt;/span&gt;</tw-passagedata><tw-passagedata pid="99" name="第二章0" tags="center nofooter bg3 title" position="1950,0" size="100,100">&lt;&lt;notify&gt;&gt;第二章&lt;&lt;/notify&gt;&gt;&lt;&lt;run clearContent(&quot;decoration-separator&quot;)&gt;&gt;
+&lt;&lt;/timed&gt;&gt;&lt;span id=&#39;storylink&#39;&gt;&lt;/span&gt;</tw-passagedata><tw-passagedata pid="98" name="第一章0" tags="center nofooter bg2 title" position="1375,0" size="100,100">&lt;span id=&#39;storylink&#39;&gt;&lt;/span&gt;&lt;&lt;notify&gt;&gt;第一章&lt;&lt;/notify&gt;&gt;&lt;&lt;run clearContent(&quot;decoration-separator&quot;)&gt;&gt;
+&lt;&lt;timed 1s t8n&gt;&gt;&lt;&lt;replace &#39;#storylink&#39;&gt;&gt;&lt;&lt;button &#39;繼續&#39; &#39;第一章1&#39;&gt;&gt;&lt;&lt;/button&gt;&gt;&lt;&lt;/replace&gt;&gt;&lt;&lt;/timed&gt;&gt;</tw-passagedata><tw-passagedata pid="99" name="第二章0" tags="center nofooter bg3 title" position="1950,0" size="100,100">&lt;&lt;notify&gt;&gt;第二章&lt;&lt;/notify&gt;&gt;&lt;&lt;run clearContent(&quot;decoration-separator&quot;)&gt;&gt;
 &lt;&lt;timed 1s t8n&gt;&gt;
 &lt;&lt;replace &#39;#storylink&#39;&gt;&gt;&lt;&lt;button &#39;繼續&#39; &#39;第二章1&#39;&gt;&gt;&lt;&lt;/button&gt;&gt;&lt;&lt;/replace&gt;&gt;
 &lt;&lt;/timed&gt;&gt;
